create github pages

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/parallax/jarallax.css">
   <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=NvIwxV"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=NvIwxV" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vxxE3l"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vxxE3l" type="text/css">
 
   
   
@@ -65,6 +66,42 @@
             </div>
         </div>
     </nav>
+</section>
+
+<section data-bs-version="5.1" class="header02 progressm5 cid-usYSna28tq mbr-fullscreen mbr-parallax-background" id="header02-d">
+	
+
+	
+	<div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(6, 6, 6);"></div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="content-wrapper">
+					<h1 class="mbr-section-title mbr-fonts-style display-1">
+						WalaWala</h1>
+					<div class="desc-wrapper">
+						<p class="mbr-desc mbr-fonts-style display-7">
+							One place to find them all</p>
+					</div>
+					<div class="text-wrapper">
+						<p class="mbr-text mbr-fonts-style display-2">
+							Find experts in your neighborhood</p>
+					</div>
+					<div class="mbr-section-btn">
+						<a class="btn btn-secondary display-4" href="#">
+							<span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+							Get started
+						</a>
+						<a class="btn btn-secondary display-4" href="#">
+							<span class="mobi-mbri mobi-mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
+							Read more
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 <section data-bs-version="5.1" class="slider2 mbr-embla coinm5 cid-usYN89nuTB" id="slider2-1">
@@ -1092,6 +1129,7 @@
 
 
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/parallax/jarallax.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
   <script src="assets/embla/embla.min.js"></script>
